# mayacms-quickstart

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements.txt
config/: settings.py  urls.py
docs/: index.md
mayacms/conf/: __init__.py  settings.py
resources/templates/registration/: login.html
resources/templates/themes/default/layouts/: base.html
resources/templates/themes/default/partials/: footer.html  header.html  metadata.html  navigation.html
